# ml_antifraud

./: .gitignore  .rooignore  ARCHITECTURE.md  Dockerfile  README.md  ai.md  architecture.html  docker-compose.traffic.yaml  docker-compose.yaml  main.py  ml_antifraud_architecture.html  prometheus.yml  pyproject.toml  repomix-output.md  repomix.config.json
api/middleware/: logging.py
api/routes/: transaction.py
config/: settings.py
exceptions/: __init__.py
load_generator/: traffic_generator.py
models/: scoring.py  transaction.py
monitoring/: metrics.py
repositories/: redis_transaction_repository.py  transaction_repository.py
services/: scoring_service.py  scoring_service_impl.py  transaction_service.py  transaction_service_impl.py
tests/: test_models.py  test_services.py
utils/: logger.py
